# cli2web

./: .gitignore  MANIFEST.in  README.md  project_structure  pyproject.toml  requirements.txt  setup.py
cli2web/: __init__.py  __main__.py  cli_parser.py  process_manager.py  web_generator.py  web_server.py
cli2web/templates/: base.html  cli_form.html
